--- a/app/src/main/res/layout/item_suggestion_game.xml
+++ b/app/src/main/res/layout/item_suggestion_game.xml
@@ -21,17 +21,18 @@
     <TextView android:id="@+id/tv_title"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
+        android:gravity="start|top"
         android:textSize="@dimen/text_size_2"
         android:textStyle="bold"
         android:textColor="@drawable/text_color"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
 
     <ImageView android:id="@+id/iv_vs2"
         android:layout_width="60dp"
         android:layout_height="80dp"
+        android:padding="10dp"
         android:src="@drawable/vs_orange"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +41,7 @@
         android:layout_width="58dp"
         android:layout_height="78dp"
         android:src="@drawable/vs_gray_dark"
+        android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -54,26 +56,24 @@
 
 
     <TextView android:id="@+id/tv_nickName1"
-        app:layout_constraintTop_toTopOf="@id/iv_icon1"
+        app:layout_constraintBottom_toTopOf="@id/tv_description1"
         app:layout_constraintStart_toEndOf="@id/iv_icon1"
-        app:layout_constraintEnd_toEndOf="@id/iv_vs"
         android:paddingStart="@dimen/profile_text_padding"
         android:text="משה גלזמן"
-        android:textSize="@dimen/text_size_2"
-        android:gravity="start|top"
-        android:layout_width="0dp"
+        android:textSize="@dimen/text_size_1"
+        android:gravity="end|top"
+        android:layout_width="wrap_content"
         android:textColor="@drawable/text_color"
         android:layout_height="wrap_content"/>
 
     <TextView android:id="@+id/tv_description1"
         app:layout_constraintBottom_toBottomOf="@id/iv_icon1"
         app:layout_constraintStart_toEndOf="@id/iv_icon1"
-        app:layout_constraintEnd_toEndOf="@id/iv_vs"
-        android:paddingStart="@dimen/profile_text_padding"
+         android:paddingStart="@dimen/profile_text_padding"
         android:text="משה גלזמן"
-        android:textSize="@dimen/text_size_1"
-        android:layout_width="0dp"
-        android:gravity="start|bottom"
+        android:textSize="@dimen/text_size_2"
+        android:layout_width="wrap_content"
+        android:gravity="end|bottom"
         android:textColor="@drawable/text_color"
         android:layout_height="wrap_content"/>
 
@@ -89,24 +89,22 @@
 
     <TextView android:id="@+id/tv_description2"
         app:layout_constraintBottom_toBottomOf="@id/iv_icon2"
-        app:layout_constraintStart_toStartOf="@id/iv_vs"
-        app:layout_constraintEnd_toStartOf="@id/iv_icon2"
+         app:layout_constraintEnd_toStartOf="@id/iv_icon2"
         android:paddingStart="@dimen/profile_text_padding"
         android:text="משה גלזמן"
-        android:textSize="@dimen/text_size_1"
+        android:textSize="@dimen/text_size_2"
         android:layout_width="0dp"
-        android:gravity="end|bottom"
+        android:gravity="start|bottom"
         android:textColor="@drawable/text_color"
         android:layout_height="wrap_content"/>
 
     <TextView android:id="@+id/tv_nickName2"
-        app:layout_constraintTop_toTopOf="@id/iv_icon2"
-        app:layout_constraintStart_toStartOf="@id/iv_vs"
+        app:layout_constraintBottom_toTopOf="@id/tv_description2"
         app:layout_constraintEnd_toStartOf="@id/iv_icon2"
         android:paddingStart="@dimen/profile_text_padding"
         android:text="משה גלזמן"
-        android:textSize="@dimen/text_size_2"
-        android:gravity="end|top"
+        android:textSize="@dimen/text_size_1"
+        android:gravity="start|top"
         android:layout_width="0dp"
         android:textColor="@drawable/text_color"
         android:layout_height="wrap_content"/>
