--- a/app/src/main/res/drawable/suggestion_background_gray.xml
+++ b/app/src/main/res/drawable/suggestion_background_gray.xml
@@ -9,7 +9,7 @@
 
     <item >
         <shape>
-            <solid android:color="#F0F0F0"/>
+            <solid android:color="#f7f7f7"/>
             <stroke android:color="@color/gray_light" android:width="1dp"/>
         </shape>
     </item>
