--- a/app/src/main/res/drawable/suggestion_background_yellow.xml
+++ b/app/src/main/res/drawable/suggestion_background_yellow.xml
@@ -9,7 +9,7 @@
 
     <item >
         <shape>
-            <solid android:color="#FFF0E0"/>
+            <solid android:color="#FDF8F1"/>
             <stroke android:color="@color/gray_light" android:width="1dp"/>
         </shape>
     </item>
