--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,16 +16,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_height="wrap_content">
 
-        <fragment
-            android:id="@+id/frag1"
-            android:name="com.moshe.glaz.sudoku.ui.fragments.HeaderFragment"
-            android:layout_width="match_parent"
-            android:layout_height="130dp" />
     </RelativeLayout>
 
     <LinearLayout android:id="@+id/ll_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:padding="10dp"
         android:background="@drawable/layout_background"
