--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,12 +13,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_height="wrap_content">
 
-        <fragment
-            android:id="@+id/frag1"
-            android:name="com.moshe.glaz.sudoku.ui.fragments.HeaderFragment"
-            android:layout_width="match_parent"
-            android:layout_height="130dp" />
-    </RelativeLayout>
+     </RelativeLayout>
 
 
 
@@ -54,7 +49,7 @@
         android:padding="6dp"
         android:layout_marginEnd="8dp"
         android:text="@string/powored_by"
-        android:textColor="#784800"
+        android:textColor="@drawable/text_color"
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/iv_profile"
         app:layout_constraintStart_toStartOf="parent"
