end-start to right-left

--- a/app/src/main/res/layout/activity_sudoku.xml
+++ b/app/src/main/res/layout/activity_sudoku.xml
@@ -21,18 +21,18 @@
             android:layout_height="40dp"
             android:src="@drawable/vs_orange"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
         <ImageView android:id="@+id/iv_vs"
             android:layout_width="29dp"
             android:layout_height="39dp"
             android:src="@drawable/vs_white"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
         <ImageView android:id="@+id/iv_icon1"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -41,7 +41,7 @@
             android:src="@drawable/ic_round_pest_control_rodent_24" />
 
         <ImageView android:id="@+id/iv_icon2"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -53,53 +53,53 @@
 
         <TextView android:id="@+id/tv_data1"
             app:layout_constraintTop_toTopOf="@id/iv_icon1"
-            app:layout_constraintStart_toEndOf="@id/iv_icon1"
-            app:layout_constraintEnd_toStartOf="@id/iv_vs"
+            app:layout_constraintLeft_toRightOf="@id/iv_icon1"
+            app:layout_constraintRight_toLeftOf="@id/iv_vs"
             app:layout_constraintBottom_toTopOf="@id/tv_description1"
-            android:paddingEnd="@dimen/profile_text_padding"
+            android:paddingRight="@dimen/profile_text_padding"
             android:text="משה גלזמן"
             android:textSize="@dimen/text_size_2"
-            android:gravity="start|center"
+            android:gravity="left|center"
             android:layout_width="0dp"
             android:textColor="@drawable/text_color_white"
             android:layout_height="0dp"/>
 
         <TextView android:id="@+id/tv_description1"
             app:layout_constraintBottom_toBottomOf="@id/iv_icon1"
-            app:layout_constraintStart_toEndOf="@id/iv_icon1"
-            app:layout_constraintEnd_toStartOf="@id/iv_vs"
+            app:layout_constraintLeft_toRightOf="@id/iv_icon1"
+            app:layout_constraintRight_toLeftOf="@id/iv_vs"
             app:layout_constraintTop_toBottomOf="@id/tv_data1"
-            android:paddingEnd="@dimen/profile_text_padding"
-            android:paddingStart="@dimen/profile_text_padding"
+            android:paddingRight="@dimen/profile_text_padding"
+            android:paddingLeft="@dimen/profile_text_padding"
             android:text="משה גלזמן"
             android:textSize="@dimen/text_size_1"
             android:layout_width="0dp"
-            android:gravity="start|center"
+            android:gravity="left|center"
             android:textColor="@drawable/text_color_white"
             android:layout_height="0dp"/>
 
         <TextView android:id="@+id/tv_score1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_icon1"
-            app:layout_constraintEnd_toStartOf="@id/tv_score2"
+            app:layout_constraintRight_toLeftOf="@id/tv_score2"
             android:padding="@dimen/profile_text_padding"
             android:text="ניקוד: 2"
             android:textSize="@dimen/text_size_2"
             android:layout_width="0dp"
-            android:gravity="start|center"
+            android:gravity="left|center"
             android:textColor="@drawable/text_color_white"
             android:layout_height="0dp"/>
 
         <TextView android:id="@+id/tv_score2"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_icon1"
-            app:layout_constraintStart_toEndOf="@id/tv_score1"
+            app:layout_constraintLeft_toRightOf="@id/tv_score1"
             android:padding="@dimen/profile_text_padding"
             android:text="ניקוד: 2"
             android:textSize="@dimen/text_size_2"
-            android:gravity="end|center"
+            android:gravity="right|center"
             android:layout_width="0dp"
             android:textColor="@drawable/text_color_white"
             android:layout_height="0dp"/>
@@ -107,26 +107,26 @@
         <TextView android:id="@+id/tv_data2"
             app:layout_constraintBottom_toTopOf="@id/tv_description2"
             app:layout_constraintTop_toTopOf="@id/iv_icon2"
-            app:layout_constraintEnd_toStartOf="@id/iv_icon2"
-            app:layout_constraintStart_toEndOf="@id/iv_vs"
-            android:paddingStart="@dimen/profile_text_padding"
+            app:layout_constraintRight_toLeftOf="@id/iv_icon2"
+            app:layout_constraintLeft_toRightOf="@id/iv_vs"
+            android:paddingLeft="@dimen/profile_text_padding"
             android:text="משה גלזמן"
             android:textSize="@dimen/text_size_2"
             android:layout_width="0dp"
-            android:gravity="end|center"
+            android:gravity="right|center"
             android:textColor="@drawable/text_color_white"
             android:layout_height="0dp"/>
 
         <TextView android:id="@+id/tv_description2"
             app:layout_constraintBottom_toBottomOf="@id/iv_icon2"
-            app:layout_constraintEnd_toStartOf="@id/iv_icon2"
-            app:layout_constraintStart_toEndOf="@id/iv_vs"
+            app:layout_constraintRight_toLeftOf="@id/iv_icon2"
+            app:layout_constraintLeft_toRightOf="@id/iv_vs"
             app:layout_constraintTop_toBottomOf="@id/tv_data2"
-            android:paddingStart="@dimen/profile_text_padding"
+            android:paddingLeft="@dimen/profile_text_padding"
             android:text="משה גלזמן"
             android:textSize="@dimen/text_size_1"
             android:layout_width="0dp"
-            android:gravity="end|center"
+            android:gravity="right|center"
             android:textColor="@drawable/text_color_white"
             android:layout_height="0dp"/>
 
